JV-1909 fix tests