@@ -9,7 +9,6 @@ import ru.top.java212.model.ExpenseAmount;
 
 import java.time.LocalDate;
 import java.util.List;
-import java.util.stream.Collectors;
 
 @SpringBootTest
 public class ExpenseDbDaoTest {
@@ -22,7 +21,8 @@ public class ExpenseDbDaoTest {
         List<Integer> list = List.of(1000,1000, 29000);
         LocalDate startPeriod = LocalDate.of(2023,9,1);
         LocalDate endPeriod = LocalDate.of(2023,9,30);
-        /*Assertions.assertEquals(list, expenseDbDao.findByDateBetween(startPeriod,endPeriod).stream()
-                .mapToInt(ExpenseAmount::getExpenseAmount).collect(Collectors.toList()));*/
+        List<Integer> result = expenseDbDao.findByDateBetween(startPeriod,endPeriod).stream()
+                .map(ExpenseAmount::getExpenseAmount).toList();
+        Assertions.assertEquals(list, result);
     }
 }
